	PR middle-end/40080 	* cgraphunit.c (cgraph_materialize_all_clones): Do not redirect 	indirect calls; verify cgraph afterwards.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@147320 138bc75d-0d04-0410-961f-82ee72b054a4